# axum-diesel-real-world

./: .env  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2023-08-31-140536_create_posts/: up.sql
src/: config.rs  errors.rs  main.rs  routes.rs  state.rs
src/domain/models/: mod.rs  post.rs
src/handlers/: mod.rs
src/handlers/posts/: create_post.rs  get_post.rs  list_posts.rs  mod.rs
src/infra/: errors.rs  mod.rs
src/infra/db/: errors.rs  mod.rs  schema.rs
src/infra/repositories/: mod.rs  post_repository.rs
src/utils/: mod.rs
src/utils/custom_extractors/: json_extractor.rs  mod.rs  path_extractor.rs
